--- a/weloveub/package.json
+++ b/weloveub/package.json
@@ -25,6 +25,7 @@
     "ionic-gulp-browserify-typescript": "^1.1.0",
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
+    "ionic-gulp-image-task": "^1.0.1",
     "ionic-gulp-sass-build": "^1.0.0",
     "ionic-gulp-scripts-copy": "^2.0.0",
     "run-sequence": "1.1.5"
